// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] blocks/<AnswerEditionReferences /> should add the expected Labor Code reference 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -75,10 +75,59 @@
                  fill=\\"currentColor\\"
                />
              </svg>
            </button>
          </div>
+         <div
+           class=\\"sc-bdVaJa sc-bwzfXH jruoDg\\"
+         >
+           <svg
+             aria-hidden=\\"true\\"
+             class=\\"svg-inline--fa fa-circle fa-w-16 fa-sm Icon-sc-4jlog9-0 kEhyQg\\"
+             color=\\"black\\"
+             data-icon=\\"circle\\"
+             data-prefix=\\"fas\\"
+             focusable=\\"false\\"
+             role=\\"img\\"
+             viewBox=\\"0 0 512 512\\"
+             xmlns=\\"http://www.w3.org/2000/svg\\"
+           >
+             <path
+               d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z\\"
+               fill=\\"currentColor\\"
+             />
+           </svg>
+           <span
+             class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
+           >
+             L1234-6
+           </span>
+           <button
+             class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
+             color=\\"white\\"
+             font-size=\\"inherit\\"
+             font-weight=\\"bold\\"
+             title=\\"Bouton supprimant la référence au Code du travail : L1234-6\\"
+           >
+             <svg
+               aria-hidden=\\"true\\"
+               class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
+               color=\\"var(--color-lapis-lazuli)\\"
+               data-icon=\\"trash\\"
+               data-prefix=\\"fas\\"
+               focusable=\\"false\\"
+               role=\\"img\\"
+               viewBox=\\"0 0 448 512\\"
+               xmlns=\\"http://www.w3.org/2000/svg\\"
+             >
+               <path
+                 d=\\"M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z\\"
+                 fill=\\"currentColor\\"
+               />
+             </svg>
+           </button>
+         </div>
        </div>
      </div>
      <div
        class=\\"sc-bdVaJa sc-bwzfXH AnswerEditionReferences__Part-sc-1inz7ja-1 fTJpKI\\"
      >"
`;

exports[`[Contrib] blocks/<AnswerEditionReferences /> should add the expected uncategorized reference 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -48,18 +48,18 @@
              />
            </svg>
            <span
              class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
            >
-             L1234-5
+             L1234-6
            </span>
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton supprimant la référence au Code du travail : L1234-5\\"
+             title=\\"Bouton supprimant la référence au Code du travail : L1234-6\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\"
@@ -224,10 +224,83 @@
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
              title=\\"Bouton supprimant la référence juridique : An Uncategorized Reference\\"
+           >
+             <svg
+               aria-hidden=\\"true\\"
+               class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
+               color=\\"var(--color-lapis-lazuli)\\"
+               data-icon=\\"trash\\"
+               data-prefix=\\"fas\\"
+               focusable=\\"false\\"
+               role=\\"img\\"
+               viewBox=\\"0 0 448 512\\"
+               xmlns=\\"http://www.w3.org/2000/svg\\"
+             >
+               <path
+                 d=\\"M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z\\"
+                 fill=\\"currentColor\\"
+               />
+             </svg>
+           </button>
+         </div>
+         <div
+           class=\\"sc-bdVaJa sc-bwzfXH jruoDg\\"
+         >
+           <svg
+             aria-hidden=\\"true\\"
+             class=\\"svg-inline--fa fa-circle fa-w-16 fa-sm Icon-sc-4jlog9-0 kEhyQg\\"
+             color=\\"black\\"
+             data-icon=\\"circle\\"
+             data-prefix=\\"fas\\"
+             focusable=\\"false\\"
+             role=\\"img\\"
+             viewBox=\\"0 0 512 512\\"
+             xmlns=\\"http://www.w3.org/2000/svg\\"
+           >
+             <path
+               d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z\\"
+               fill=\\"currentColor\\"
+             />
+           </svg>
+           <span
+             class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
+           >
+             A New Uncategorized Reference
+           </span>
+           <button
+             class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
+             color=\\"white\\"
+             font-size=\\"inherit\\"
+             font-weight=\\"bold\\"
+             title=\\"Bouton ouvrant le lien associé à la référence juridique : A New Uncategorized Reference\\"
+           >
+             <svg
+               aria-hidden=\\"true\\"
+               class=\\"svg-inline--fa fa-link fa-w-16 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
+               color=\\"var(--color-lapis-lazuli)\\"
+               data-icon=\\"link\\"
+               data-prefix=\\"fas\\"
+               focusable=\\"false\\"
+               role=\\"img\\"
+               viewBox=\\"0 0 512 512\\"
+               xmlns=\\"http://www.w3.org/2000/svg\\"
+             >
+               <path
+                 d=\\"M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z\\"
+                 fill=\\"currentColor\\"
+               />
+             </svg>
+           </button>
+           <button
+             class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
+             color=\\"white\\"
+             font-size=\\"inherit\\"
+             font-weight=\\"bold\\"
+             title=\\"Bouton supprimant la référence juridique : A New Uncategorized Reference\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\""
`;

exports[`[Contrib] blocks/<AnswerEditionReferences /> should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AnswerEditionReferences__Container-sc-1inz7ja-0 ehkkGP"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH AnswerEditionReferences__Part-sc-1inz7ja-1 fTJpKI"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH dicanr"
        width="0.5"
      >
        <h2
          class="Subtitle-sc-17ig8qv-0 gsnyDG"
        >
          Articles du Code du travail :
        </h2>
        <div>
          <div
            class="sc-bdVaJa sc-bwzfXH Tags__Container-sc-9wg2t-0 kGdxZz"
          >
            <input
              class="Input___Input-l1y0rz-1 didSAw"
              placeholder="Commencez à taper le nom de la référence au Code du travail"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH List__Container-sc-1pm6mpm-0 euOFDR"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH jruoDg"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle fa-w-16 fa-sm Icon-sc-4jlog9-0 kEhyQg"
            color="black"
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
            />
          </svg>
          <span
            class="List__Text-sc-1pm6mpm-1 bKJbSY"
          >
            L1234-5
          </span>
          <button
            class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV"
            color="white"
            font-size="inherit"
            font-weight="bold"
            title="Bouton supprimant la référence au Code du travail : L1234-5"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz"
              color="var(--color-lapis-lazuli)"
              data-icon="trash"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-bwzfXH AnswerEditionReferences__Part-sc-1inz7ja-1 fTJpKI"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH dicanr"
        width="0.5"
      >
        <h2
          class="Subtitle-sc-17ig8qv-0 gsnyDG"
        >
          Articles de convention collective :
        </h2>
        <form
          role="form"
        >
          <div
            class="sc-bdVaJa sc-bwzfXH Field-sc-56e27r-0 hxCooE"
          >
            <input
              class="Input___Input-l1y0rz-1 didSAw"
              placeholder="Ex: Article 7, Texte sur les salaires de 1984…"
            />
          </div>
          <div
            class="sc-bdVaJa sc-bwzfXH Field-sc-56e27r-0 hxCooE"
          >
            <button
              class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 jmYpts"
              color="var(--color-lapis-lazuli)"
              font-size="inherit"
              font-weight="bold"
              title="Ajouter la référence à la convention collective"
              type="submit"
            >
              Ajouter la référence Convention Collective
            </button>
          </div>
        </form>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH List__Container-sc-1pm6mpm-0 euOFDR"
      />
    </div>
    <div
      class="sc-bdVaJa sc-bwzfXH AnswerEditionReferences__Part-sc-1inz7ja-1 fTJpKI"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH dicanr"
        width="0.5"
      >
        <h2
          class="Subtitle-sc-17ig8qv-0 gsnyDG"
        >
          Autre référence juridique (décret, règlementation, circulaire, jurisprudence) :
        </h2>
        <form
          role="form"
        >
          <div
            class="sc-bdVaJa sc-bwzfXH Field-sc-56e27r-0 hxCooE"
          >
            <input
              class="Input___Input-l1y0rz-1 didSAw"
              placeholder="Référence (ex: Décret n°82-447 du 28 mai 1982…)"
            />
          </div>
          <div
            class="sc-bdVaJa sc-bwzfXH Field-sc-56e27r-0 hxCooE"
          >
            <input
              class="Input___Input-l1y0rz-1 didSAw"
              placeholder="URL (ex: https://www.legifrance.gouv.fr/…)"
            />
          </div>
          <div
            class="sc-bdVaJa sc-bwzfXH Field-sc-56e27r-0 hxCooE"
          >
            <button
              class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 jmYpts"
              color="var(--color-lapis-lazuli)"
              font-size="inherit"
              font-weight="bold"
              title="Ajouter la référence juridique"
              type="submit"
            >
              Ajouter la référence juridique
            </button>
          </div>
        </form>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH List__Container-sc-1pm6mpm-0 euOFDR"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH jruoDg"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle fa-w-16 fa-sm Icon-sc-4jlog9-0 kEhyQg"
            color="black"
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
              fill="currentColor"
            />
          </svg>
          <span
            class="List__Text-sc-1pm6mpm-1 bKJbSY"
          >
            An Uncategorized Reference
          </span>
          <button
            class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV"
            color="white"
            font-size="inherit"
            font-weight="bold"
            title="Bouton ouvrant le lien associé à la référence juridique : An Uncategorized Reference"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-link fa-w-16 fa-1x Icon-sc-4jlog9-0 bEnrPz"
              color="var(--color-lapis-lazuli)"
              data-icon="link"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV"
            color="white"
            font-size="inherit"
            font-weight="bold"
            title="Bouton supprimant la référence juridique : An Uncategorized Reference"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz"
              color="var(--color-lapis-lazuli)"
              data-icon="trash"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AnswerEditionReferences /> should not duplicate an existing uncategorized reference 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -48,18 +48,18 @@
              />
            </svg>
            <span
              class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
            >
-             L1234-5
+             L1234-6
            </span>
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton supprimant la référence au Code du travail : L1234-5\\"
+             title=\\"Bouton supprimant la référence au Code du travail : L1234-6\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\"
@@ -192,18 +192,18 @@
              />
            </svg>
            <span
              class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
            >
-             An Uncategorized Reference
+             A New Uncategorized Reference
            </span>
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton ouvrant le lien associé à la référence juridique : An Uncategorized Reference\\"
+             title=\\"Bouton ouvrant le lien associé à la référence juridique : A New Uncategorized Reference\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-link fa-w-16 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\"
@@ -223,11 +223,11 @@
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton supprimant la référence juridique : An Uncategorized Reference\\"
+             title=\\"Bouton supprimant la référence juridique : A New Uncategorized Reference\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\""
`;

exports[`[Contrib] blocks/<AnswerEditionReferences /> should remove the expected Labor Code reference 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -48,18 +48,18 @@
              />
            </svg>
            <span
              class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
            >
-             L1234-5
+             L1234-6
            </span>
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton supprimant la référence au Code du travail : L1234-5\\"
+             title=\\"Bouton supprimant la référence au Code du travail : L1234-6\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\""
`;

exports[`[Contrib] blocks/<AnswerEditionReferences /> should remove the expected uncategorized reference 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -48,18 +48,18 @@
              />
            </svg>
            <span
              class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
            >
-             L1234-5
+             L1234-6
            </span>
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton supprimant la référence au Code du travail : L1234-5\\"
+             title=\\"Bouton supprimant la référence au Code du travail : L1234-6\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\"
@@ -192,18 +192,18 @@
              />
            </svg>
            <span
              class=\\"List__Text-sc-1pm6mpm-1 bKJbSY\\"
            >
-             An Uncategorized Reference
+             A New Uncategorized Reference
            </span>
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton ouvrant le lien associé à la référence juridique : An Uncategorized Reference\\"
+             title=\\"Bouton ouvrant le lien associé à la référence juridique : A New Uncategorized Reference\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-link fa-w-16 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\"
@@ -223,11 +223,11 @@
            <button
              class=\\"sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 loLOpV\\"
              color=\\"white\\"
              font-size=\\"inherit\\"
              font-weight=\\"bold\\"
-             title=\\"Bouton supprimant la référence juridique : An Uncategorized Reference\\"
+             title=\\"Bouton supprimant la référence juridique : A New Uncategorized Reference\\"
            >
              <svg
                aria-hidden=\\"true\\"
                class=\\"svg-inline--fa fa-trash fa-w-14 fa-1x Icon-sc-4jlog9-0 bEnrPz\\"
                color=\\"var(--color-lapis-lazuli)\\""
`;
